--- a/data/算法例题/二分查找.md
+++ b/data/算法例题/二分查找.md
@@ -70,3 +70,98 @@ class Solution:
 ```
 
                 
+### 2560. 打家劫舍 IV([原题](https://leetcode.cn/problems/house-robber-iv/description/))
+
+中等
+
+沿街有一排连续的房屋。每间房屋内都藏有一定的现金。现在有一位小偷计划从这些房屋中窃取现金。
+
+由于相邻的房屋装有相互连通的防盗系统，所以小偷 不会窃取相邻的房屋 。
+
+小偷的 窃取能力 定义为他在窃取过程中能从单间房屋中窃取的 最大金额 。
+
+给你一个整数数组 nums 表示每间房屋存放的现金金额。形式上，从左起第 i 间房屋中放有 nums[i] 美元。
+
+另给你一个整数 k ，表示窃贼将会窃取的 最少 房屋数。小偷总能窃取至少 k 间房屋。
+
+返回小偷的 最小 窃取能力。
+
+ 
+
+> 示例 1：
+> 
+> 输入：nums = [2,3,5,9], k = 2
+> 输出：5
+> 解释：
+> 小偷窃取至少 2 间房屋，共有 3 种方式：
+> - 窃取下标 0 和 2 处的房屋，窃取能力为 max(nums[0], nums[2]) = 5 。
+> - 窃取下标 0 和 3 处的房屋，窃取能力为 max(nums[0], nums[3]) = 9 。
+> - 窃取下标 1 和 3 处的房屋，窃取能力为 max(nums[1], nums[3]) = 9 。
+> 因此，返回 min(5, 9, 9) = 5 。
+ 
+> 示例 2：
+> 
+> 输入：nums = [2,7,9,3,1], k = 2
+> 输出：2
+> 解释：共有 7 种窃取方式。窃取能力最小的情况所对应的方式是窃取下标 0 和 4 处的房> 屋。返回 max(nums[0], nums[4]) = 2 。
+ 
+
+提示：
+
+- `1 <= nums.length <= 10^5`
+- `1 <= nums[i] <= 10^9`
+- `1 <= k <= (nums.length + 1)/2`
+
+### 本人解法
+```python
+class Solution:
+    def minCapability(self, nums: List[int], k: int) -> int:
+        n = len(nums)
+        if n == 1 :
+            return nums[0]
+        l = []
+        r = []
+        dp = [[[],k],[[],k-1]] 
+        heapq.heappush(dp[1][0],-nums[0]) 
+        ans = inf 
+        
+        for i in range(1,n):
+            if dp[0][0] and dp[0][0][-1] > dp[1][0][-1]:
+               dp[1][0] = dp[0][0].copy()
+               dp[1][1] = dp[0][1]
+            
+            if dp[0][1] == 0 :
+                if dp[0][0][0] < -nums[i]:
+                    heapq.heapreplace(dp[0][0],-nums[i])
+            else:
+                heapq.heappush(dp[0][0],-nums[i]) 
+                dp[0][1]-=1 
+            if dp[0][1] == 0 : 
+                ans = min(ans,-dp[0][0][0])
+            dp[0],dp[1] = dp[1],dp[0]
+            print(dp)
+        return ans
+```
+连着几天都是动态规划的，做惯了，脑子一下子没转过来。代码就别瞅了，是错的
+
+#### 他人解法
+```python
+class Solution:
+    def minCapability(self, nums: List[int], k: int) -> int:
+        # solve(mx) 返回最大金额为 mx 时，最多可以偷多少间房子
+        def solve(mx: int) -> int:
+            f0 = f1 = 0
+            for x in nums:
+                if x > mx:
+                    f0 = f1
+                else:
+                    f0, f1 = f1, max(f1, f0 + 1)
+            return f1
+        return bisect_left(range(max(nums)), k, key=solve)
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/problems/house-robber-iv/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+看到最大最小值就要直接想到二分查找
