--- a/data/算法例题/图论.md
+++ b/data/算法例题/图论.md
@@ -212,12 +212,12 @@ class Solution:
  
 
 > 示例 1：
-> ![Alt text](98_1.png)
+> ![Alt text](../算法/98_1.png)
 > 输入：root = [2,1,3]
 > 输出：true
 
 > 示例 2：
-> ![Alt text](98_2.png)
+> ![Alt text](../算法/98_2.png)
 > 输入：root = [5,1,4,null,null,3,6]
 > 输出：false
 > 解释：根节点的值是 5 ，但是右子节点的值是 4 。
@@ -259,7 +259,7 @@ class Solution:
         return dfs(root)[0]
 ```
 粗糙，但是管用
-![Alt text](98_3.png)
+![Alt text](../算法/98_3.png)
 
 #### 他人解法
 ```python
@@ -278,3 +278,91 @@ class Solution:
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 ```
 我是sb，遍历就解决的事愣是没把自己玩死。
+
+## 拓扑排序
+### 2603. 收集树中金币([原题](https://leetcode.cn/problems/collect-coins-in-a-tree/description/))
+困难
+
+给你一个 n 个节点的无向无根树，节点编号从 0 到 n - 1 。给你整数 n 和一个长度为 n - 1 的二维整数数组 edges ，其中 edges[i] = [ai, bi] 表示树中节点 ai 和 bi 之间有一条边。再给你一个长度为 n 的数组 coins ，其中 coins[i] 可能为 0 也可能为 1 ，1 表示节点 i 处有一个金币。
+
+一开始，你需要选择树中任意一个节点出发。你可以执行下述操作任意次：
+
+收集距离当前节点距离为 2 以内的所有金币，或者
+移动到树中一个相邻节点。
+你需要收集树中所有的金币，并且回到出发节点，请你返回最少经过的边数。
+
+如果你多次经过一条边，每一次经过都会给答案加一。
+
+ 
+
+> 示例 1：
+> ![Alt text](../算法/2603_1.png)
+> 输入：coins = [1,0,0,0,0,1], edges = [[0,1],[1,2],[2,3],[3,4],[4,5]]
+> 输出：2
+> 解释：从节点 2 出发，收集节点 0 处的金币，移动到节点 3 ，收集节点 5 处的金币，然后移动回节点 2 。
+
+> 示例 2：
+> ![Alt text](../算法/2603_2.png)
+> 输入：coins = [0,0,0,1,1,0,0,1], edges = [[0,1],[0,2],[1,3],[1,4],[2,5],[5,6],[5,7]]
+> 输出：2
+> 解释：从节点 0 出发，收集节点 4 和 3 处的金币，移动到节点 2 处，收集节点 7 处的金币，移动回节点 0 。
+ 
+
+提示：
+
+- `n == coins.length`
+- `1 <= n <= 3 * 10^4`
+- `0 <= coins[i] <= 1`
+- `edges.length == n - 1`
+- `edges[i].length == 2`
+- `0 <= ai, bi < n`
+- `ai != bi`
+- `edges 表示一棵合法的树。`
+
+#### 他人解法
+```python
+class Solution:
+    def collectTheCoins(self, coins: List[int], edges: List[List[int]]) -> int:
+        n = len(coins)
+        g = [[] for _ in range(n)]
+        for x, y in edges:
+            g[x].append(y)
+            g[y].append(x)  # 建图
+        deg = list(map(len, g))  # 每个节点的度数（邻居个数）
+
+        left_edges = n - 1  # 剩余边数
+        # 拓扑排序，去掉没有金币的子树
+        q = []
+        for i, (d, c) in enumerate(zip(deg, coins)):
+            if d == 1 and c == 0:  # 没有金币的叶子
+                q.append(i)
+        while q:
+            left_edges -= 1  # 删除节点到其父节点的边
+            for y in g[q.pop()]:
+                deg[y] -= 1
+                if deg[y] == 1 and coins[y] == 0:  # 没有金币的叶子
+                    q.append(y)
+
+        # 再次拓扑排序
+        for i, (d, c) in enumerate(zip(deg, coins)):
+            if d == 1 and c:  # 有金币的叶子（判断 c 是避免把没有金币的叶子也算进来）
+                q.append(i)
+        left_edges -= len(q)  # 删除所有叶子（到其父节点的边）
+        for x in q:  # 遍历所有叶子
+            for y in g[x]:
+                deg[y] -= 1
+                if deg[y] == 1:  # y 现在是叶子了
+                    left_edges -= 1  # 删除 y（到其父节点的边）
+        return max(left_edges * 2, 0)
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/problems/collect-coins-in-a-tree/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+1. 建图
+2. 把没金币的叶节点去掉(循环)
+3. 此时所有的叶节点都已经是有金币的节点了
+4. 找叶子节点的父节点的父节点（可以跨两层拿金币）
+5. 根据剩余边数获取答案
+6. 考虑到存在同一父节点为多个有金币的叶节点的情况，所以考虑节点入度，当度数为1时，即为叶节点后才将其进行计数。
