--- a/data/强化学习/PPO_2.ipynb
+++ b/data/强化学习/PPO_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,57 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.04486616,  0.02103314, -0.03389104, -0.04321713])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env.action_space:  Discrete(2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"env.action_space: \", env.action_space)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "obj [-0.0036363   0.99969642 -0.09908084 -1.57954357]\n",
-      "reward 1.0\n",
-      "done False\n",
-      "info {}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#执行一个向左的操作\n",
     "obj, reward, done, info = env.step(1) #1 向右 0向左\n",
@@ -77,7 +47,217 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#随机获取一个动作\n",
+    "action = env.action_space.sample()\n",
+    "print(action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[-0.03358403 -0.20950812 -0.04158562  0.23245944]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.03777419 -0.40401195 -0.03693643  0.5117403 ]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.04585443 -0.20838972 -0.02670163  0.20765025]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.05002222 -0.40311988 -0.02254862  0.49179202]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.05808462 -0.20768724 -0.01271278  0.19208886]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.06223836 -0.40262505 -0.008871    0.48073448]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.07029087 -0.207379    0.00074368  0.18526889]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.07443845 -0.40251159  0.00444906  0.47818633]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.08248868 -0.59769607  0.01401279  0.77226818]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.0944426  -0.793008    0.02945815  1.06932693]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.11030276 -0.98850691  0.05084469  1.37110752]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.1300729  -1.18422659  0.07826684  1.67924954]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.15375743 -1.38016368  0.11185183  1.99524241]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.1813607  -1.18637565  0.15175668  1.73919272]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.20508821 -0.99327364  0.18654054  1.49731408]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.22495369 -0.80084396  0.21648682  1.26820247]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.04390316  0.1493734   0.01110318 -0.30586511]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.04689063  0.34433538  0.00498588 -0.59502579]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.05377734  0.5393872  -0.00691464 -0.88613404]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.06456508  0.73460233 -0.02463732 -1.18098263]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.07925713  0.5398087  -0.04825697 -0.8961235 ]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.0900533   0.73555053 -0.06617944 -1.20357648]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.10476431  0.54134361 -0.09025097 -0.93234635]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.11559119  0.73755981 -0.1088979  -1.25197058]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.13034238  0.5439884  -0.13393731 -0.99528614]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.14122215  0.35088732 -0.15384303 -0.74748864]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.1482399   0.54775917 -0.16879281 -1.08436032]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.15919508  0.35521712 -0.19048001 -0.84904155]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.16629942  0.16313199 -0.20746084 -0.62178818]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.16956206 -0.02858185 -0.21989661 -0.40094067]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.02559351  0.15185888  0.04765313 -0.31528479]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.02863069 -0.04390833  0.04134743 -0.00796261]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.02775252  0.150597    0.04118818 -0.28731856]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.03076446 -0.04508739  0.03544181  0.01806498]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.02986271 -0.24069922  0.03580311  0.32171618]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.02504873 -0.43631225  0.04223743  0.62547154]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[ 0.01632248 -0.24180458  0.05474686  0.34638437]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.01148639 -0.4376608   0.06167455  0.65581607]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[ 0.00273318 -0.63358469  0.07479087  0.96726398]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.00993852 -0.43954242  0.09413615  0.69898228]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.01872937 -0.24584298  0.1081158   0.4373547 ]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.02364623 -0.05240418  0.11686289  0.18061484]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.02469431 -0.24898764  0.12047519  0.50775831]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.02967406 -0.4455827   0.13063035  0.8358475 ]\n",
+      "reward 1.0\n",
+      "0\n",
+      "[-0.03858572 -0.64222392  0.1473473   1.16659244]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.0514302  -0.44929404  0.17067915  0.92349702]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.06041608 -0.25683756  0.18914909  0.68894338]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.06555283 -0.0647738   0.20292796  0.46126489]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.0668483   0.12698902  0.21215326  0.23877511]\n",
+      "reward 1.0\n",
+      "1\n",
+      "[-0.04905259  0.23824287 -0.02193466 -0.33494261]\n",
+      "reward 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.reset()\n",
+    "done = True\n",
+    "\n",
+    "for step in range(50):\n",
+    "    # if step % 100 == 0:\n",
+    "    \n",
+    "    #     print(step//100)\n",
+    "    # print(step)\n",
+    "    if done:\n",
+    "        state = env.reset()\n",
+    "    action = env.action_space.sample()\n",
+    "    state, reward, done, info = env.step(action)\n",
+    "    print(action)\n",
+    "    print(state)\n",
+    "    print(\"reward\", reward) # 指定该动作获取的奖励值\n",
+    "\n",
+    "env.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gym'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mC:\\WINDOWS\\TEMP/ipykernel_19904/1223209380.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mgym\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfuntional\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'gym'"
+     ]
+    }
+   ],
+   "source": [
+    "import gym \n",
+    "import torch\n",
+    "import torch.nn as nn \n",
+    "import torch.nn.funtional as F\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -103,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
