--- a/data/强化学习/ppo.ipynb
+++ b/data/强化学习/ppo.ipynb
@@ -1032,13 +1032,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "class CustomSkipFrame(Wrapper):\n",
-    "    def __init__(self, env, skip=8):\n",
+    "    def __init__(self, env, skip=4):\n",
     "        super(CustomSkipFrame, self).__init__(env)\n",
     "        self.observation_space = Box(low=0, high=255, shape=(4, 84, 84))\n",
     "        self.skip = skip\n",
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,16 +1079,17 @@
     "    def step(self, action):\n",
     "        state, reward, done, info = self.env.step(action) \n",
     "        state = process_frame(state)\n",
-    "        reward += (info[\"score\"] - self.curr_score) / 20.\n",
-    "        reward -= 5 if info[\"x_pos\"] - self.pre_x else -5 # 当保持原位时扣分，向前动就加分\n",
+    "        reward += (info[\"score\"] - self.curr_score) / 50.\n",
+    "        \n",
+    "        reward += (info[\"x_pos\"] - self.pre_x ) * 10.\n",
     "        self.pre_x = info[\"x_pos\"]\n",
-    "        if done  : reward -= 50 \n",
+    "        # self.pre_x = info[\"x_pos\"]\n",
     "        self.curr_score = info[\"score\"]\n",
     "        if done:\n",
     "            if info[\"flag_get\"]:\n",
-    "                reward += 500\n",
+    "                reward += 5000\n",
     "            else:\n",
-    "                reward -= 500\n",
+    "                reward -= 50\n",
     "        return state, reward/10. , done, info\n",
     "\n",
     "    def reset(self):\n",
@@ -1098,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1143,28 +1144,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "失败了,第1次尝试,比最好成绩好了683,奖励值为1086.280000000002,目前最远距离为721\n",
+      "失败了,第5次尝试,比最好成绩好了1,奖励值为12.099999999999987,目前最远距离为722\n",
+      "失败了,第8次尝试,比最好成绩好了406,奖励值为21.19999999999999,目前最远距离为1128\n",
+      "失败了,第9次尝试,比最好成绩好了4,奖励值为20.999999999999964,目前最远距离为1132\n",
+      "失败了,第14次尝试,比最好成绩好了75,奖励值为24.09999999999996,目前最远距离为1207\n",
+      "失败了,第24次尝试,比最好成绩好了6,奖励值为25.699999999999967,目前最远距离为1213\n",
+      "失败了,第58次尝试,比最好成绩好了13,奖励值为26.19999999999998,目前最远距离为1226\n",
+      "失败了,第63次尝试,比最好成绩好了205,奖励值为33.00000000000003,目前最远距离为1431\n",
+      "失败了,第77次尝试,比最好成绩好了228,奖励值为40.399999999999984,目前最远距离为1659\n",
+      "失败了,第307次尝试,比最好成绩好了297,奖励值为48.599999999999994,目前最远距离为1956\n",
+      "失败了,第334次尝试,比最好成绩好了62,奖励值为48.5,目前最远距离为2018\n"
+     ]
+    }
+   ],
    "source": [
     "custom_env.reset()\n",
     "done = True\n",
     "flag =False \n",
-    "t = 0 \n",
+    "step_ = 0 \n",
+    "n = 1\n",
+    "max_x = 38 \n",
+    "\n",
     "import cv2  \n",
     "for step in range(50000):\n",
     "    if done == True :\n",
     "        custom_env.reset()\n",
+    "        \n",
     "        if flag:\n",
-    "            print(f\"成功了,距离上一次成功经过了{step-t}步\")\n",
-    "            t = step \n",
-    "\n",
-    "\n",
-    "\n",
-    "    action = custom_env.action_space.sample()\n",
+    "            print(f\"成功了,距离上一次成功经过了{step-step_}步\")\n",
+    "            step_ = step \n",
+    "        x = info[\"x_pos\"]\n",
+    "        if   x > max_x :\n",
+    "            print(f\"失败了,第{n}次尝试,比最好成绩好了{x  - max_x},奖励值为{total_reward},目前最远距离为{x}\")\n",
+    "            max_x = x\n",
+    "        total_reward = 0 \n",
+    "        n+=1 \n",
+    "    action = custom_env.action_space.sample() \n",
     "    states, reward, done, info = custom_env.step(action)\n",
+    "    total_reward += reward\n",
     "    ############# 显示过程 ##################\n",
     "    # flag = info[\"flag_get\"]\n",
+    "    # print(info)\n",
+    "    # states = states[0]\n",
+    "    # for state in states:\n",
+    "    #     state.reshape(state.shape+(1,))\n",
+    "    #     cv2.imshow(\"test\",state)\n",
+    "    # if cv2.waitKey(1) &  0xff == ord(\"q\"): # 在英文状态下，按下按s键 q 会关闭显示窗口    \n",
+    "    #     break\n",
+    "    ##################################################\n",
+    "    \n",
+    "# cv2.destroyAllWindows()\n",
+    "custom_env.close()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "失败了,第1次尝试,比最好成绩好了198,奖励值为6.300000000000001,目前最远距离为236\n",
+      "失败了,第2次尝试,比最好成绩好了447,奖励值为20.59999999999996,目前最远距离为683\n",
+      "失败了,第4次尝试,比最好成绩好了215,奖励值为28.699999999999953,目前最远距离为898\n",
+      "失败了,第8次尝试,比最好成绩好了510,奖励值为49.499999999999964,目前最远距离为1408\n",
+      "失败了,第25次尝试,比最好成绩好了240,奖励值为60.800000000000104,目前最远距离为1648\n",
+      "失败了,第36次尝试,比最好成绩好了14,奖励值为56.60000000000004,目前最远距离为1662\n",
+      "失败了,第111次尝试,比最好成绩好了349,奖励值为71.10000000000008,目前最远距离为2011\n"
+     ]
+    }
+   ],
+   "source": [
+    "custom_env.reset()\n",
+    "done = True\n",
+    "flag =False \n",
+    "step_ = 0 \n",
+    "n = 1\n",
+    "max_x = 38 \n",
+    "\n",
+    "import cv2  \n",
+    "for step in range(50000):\n",
+    "    if done == True :\n",
+    "        custom_env.reset()\n",
+    "        \n",
+    "        if flag:\n",
+    "            print(f\"成功了,距离上一次成功经过了{step-step_}步\")\n",
+    "            step_ = step \n",
+    "        x = info[\"x_pos\"]\n",
+    "        if   x > max_x :\n",
+    "            print(f\"失败了,第{n}次尝试,比最好成绩好了{x  - max_x},奖励值为{total_reward},目前最远距离为{x}\")\n",
+    "            max_x = x\n",
+    "        total_reward = 0 \n",
+    "        n+=1 \n",
+    "    action = custom_env.action_space.sample() \n",
+    "    states, reward, done, info = custom_env.step(action)\n",
+    "    total_reward += reward\n",
+    "    ############# 显示过程 ##################\n",
+    "    # flag = info[\"flag_get\"]\n",
+    "    # print(info)\n",
     "    # states = states[0]\n",
     "    # for state in states:\n",
     "    #     state.reshape(state.shape+(1,))\n",
@@ -1193,11 +1281,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "由于不熟悉reward的反馈机制，所以很难设置reward值。\n"
+   ]
   }
  ],
  "metadata": {
