马里奥实战（受限于spinningup库难以安装，暂缓）

--- a/深度学习.md
+++ b/深度学习.md
@@ -9,7 +9,7 @@
 [<font size="5">数据清洗</font>](数据清洗.md)
 <h5 id="data_1"></h5>
 
-## 2. 基础知识 ([原始链接](https://tianchi.aliyun.com/course/311/3558))
+## 2.基础知识 ([原始链接](https://tianchi.aliyun.com/course/311/3558))
 ### 2.1 卷积
 #### 2.1.1 实例
 ```python
@@ -106,8 +106,8 @@ numpy是人工智能中一个极为好用的库，大部分的算法都可以通
 
 #### 4.1.1 张量 ([具体笔记](./data/深度学习/torch_basic_tensor.ipynb))<p id="tensor中的笔记绝大多数均为天池的原文件，只是根据个人理解进行了些许更改"> 
 张量(tensor)是torch中的一种特殊的数据形式，可以在GPU上计算。所以通常会把需要进行大量操作的数据均转化为tensor形式进行操作
-##### 4.1.1.1常用函数 
-###### 创建
+##### 4.1.1.1 常用函数 
+###### 4.1.1.1.1 创建
 - `torch.tensor(data)`
 **功能**：**从data创建tensor**
 `data`: 数据，可以是list，numpy
@@ -169,7 +169,7 @@ numpy是人工智能中一个极为好用的库，大部分的算法都可以通
 >
 - `torch.bernoulli(input)`
  **功能：以input为概率，生成伯努利分布（0-1分布，两点分布）**
-###### 张量操作
+###### 4.1.1.1.2 张量操作
 >
 - `torch.cat(tensors, dim=0)`
  **功能：将张量按维度dim进行拼接**
@@ -209,6 +209,7 @@ numpy是人工智能中一个极为好用的库，大部分的算法都可以通
    >
 - `torch.mul(tensor1, tensor2)`
  **功能：将tensor1与tensor2中对应元素进行相乘**
+
 
 #### 4.1.2 反向传播([具体笔记](./data/深度学习/torch_basic_backward.ipynb))
 即误差反向传播，是训练神经网络的重要方法。
@@ -320,5 +321,16 @@ model.eval()
 
 
 
-## 4.3 cv部分
+### 4.3 nn部分
+#### 4.3.1 模型构建部分
+- `torch.nn.Conv2d(num_inputs,32,3,stride = 2 ,padding =1)` : 创建  的卷积层
+- `torch.nn.Linear(326*6,512)` ：创建  的线性层
+- `torch.nn.maxpool2d()` # 创建 的最大池化层
+
+
+#### 4.3.2 模型参数初始化部分
+- `torch.nn.init.xavier_uniform_(a)` : 为a以均匀分布的方式用值填充输入张量
+- `torch.nn.init.constant_(a,b)` ： 为a以b为值填入张量
+
+## 5.cv部分
 量大，速速跳转[点这](cv.md)
