--- a/data/强化学习/PPO_2.ipynb
+++ b/data/强化学习/PPO_2.ipynb
@@ -1,41 +1,88 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import gym\n",
-    "env = gym.make(\"CartPole-v0\")"
+    "倒立摆环境实验"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\conda\\envs\\d2l\\lib\\site-packages\\gym\\envs\\registration.py:555: UserWarning: \u001b[33mWARN: The environment CartPole-v0 is out of date. You should consider upgrading to version `v1`.\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gym\n",
+    "env = gym.make(\"CartPole-v0\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.04579001,  0.03924654, -0.03609226, -0.04957405], dtype=float32),\n",
+       " {})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "env.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env.action_space:  Discrete(2)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"env.action_space: \", env.action_space)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obj [-0.03169782  0.62620384 -0.05730348 -0.9638166 ]\n",
+      "reward 1.0\n",
+      "done False\n",
+      "info {}\n"
+     ]
+    }
+   ],
    "source": [
     "#执行一个向左的操作\n",
-    "obj, reward, done, info = env.step(1) #1 向右 0向左\n",
+    "obj, reward, done,_, info = env.step(1) #1 向右 0向左\n",
     "print(\"obj\", obj) # 新状态\n",
     "print(\"reward\", reward) # 指定该动作获取的奖励值\n",
     "print(\"done\", done) # 回合是否结束\n",
@@ -44,9 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "#随机获取一个动作\n",
     "action = env.action_space.sample()\n",
@@ -57,206 +112,96 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "[-0.03358403 -0.20950812 -0.04158562  0.23245944]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.03777419 -0.40401195 -0.03693643  0.5117403 ]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.04585443 -0.20838972 -0.02670163  0.20765025]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.05002222 -0.40311988 -0.02254862  0.49179202]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.05808462 -0.20768724 -0.01271278  0.19208886]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.06223836 -0.40262505 -0.008871    0.48073448]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.07029087 -0.207379    0.00074368  0.18526889]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.07443845 -0.40251159  0.00444906  0.47818633]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.08248868 -0.59769607  0.01401279  0.77226818]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.0944426  -0.793008    0.02945815  1.06932693]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.11030276 -0.98850691  0.05084469  1.37110752]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.1300729  -1.18422659  0.07826684  1.67924954]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.15375743 -1.38016368  0.11185183  1.99524241]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.1813607  -1.18637565  0.15175668  1.73919272]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.20508821 -0.99327364  0.18654054  1.49731408]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.22495369 -0.80084396  0.21648682  1.26820247]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.04390316  0.1493734   0.01110318 -0.30586511]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.04689063  0.34433538  0.00498588 -0.59502579]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.05377734  0.5393872  -0.00691464 -0.88613404]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.06456508  0.73460233 -0.02463732 -1.18098263]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.07925713  0.5398087  -0.04825697 -0.8961235 ]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.0900533   0.73555053 -0.06617944 -1.20357648]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.10476431  0.54134361 -0.09025097 -0.93234635]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.11559119  0.73755981 -0.1088979  -1.25197058]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.13034238  0.5439884  -0.13393731 -0.99528614]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.14122215  0.35088732 -0.15384303 -0.74748864]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.1482399   0.54775917 -0.16879281 -1.08436032]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.15919508  0.35521712 -0.19048001 -0.84904155]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.16629942  0.16313199 -0.20746084 -0.62178818]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.16956206 -0.02858185 -0.21989661 -0.40094067]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.02559351  0.15185888  0.04765313 -0.31528479]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.02863069 -0.04390833  0.04134743 -0.00796261]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.02775252  0.150597    0.04118818 -0.28731856]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.03076446 -0.04508739  0.03544181  0.01806498]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.02986271 -0.24069922  0.03580311  0.32171618]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.02504873 -0.43631225  0.04223743  0.62547154]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[ 0.01632248 -0.24180458  0.05474686  0.34638437]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.01148639 -0.4376608   0.06167455  0.65581607]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[ 0.00273318 -0.63358469  0.07479087  0.96726398]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.00993852 -0.43954242  0.09413615  0.69898228]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.01872937 -0.24584298  0.1081158   0.4373547 ]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.02364623 -0.05240418  0.11686289  0.18061484]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.02469431 -0.24898764  0.12047519  0.50775831]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.02967406 -0.4455827   0.13063035  0.8358475 ]\n",
-      "reward 1.0\n",
-      "0\n",
-      "[-0.03858572 -0.64222392  0.1473473   1.16659244]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.0514302  -0.44929404  0.17067915  0.92349702]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.06041608 -0.25683756  0.18914909  0.68894338]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.06555283 -0.0647738   0.20292796  0.46126489]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.0668483   0.12698902  0.21215326  0.23877511]\n",
-      "reward 1.0\n",
-      "1\n",
-      "[-0.04905259  0.23824287 -0.02193466 -0.33494261]\n",
-      "reward 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env.reset()\n",
     "done = True\n",
     "\n",
     "for step in range(50):\n",
-    "    # if step % 100 == 0:\n",
-    "    \n",
-    "    #     print(step//100)\n",
-    "    # print(step)\n",
     "    if done:\n",
     "        state = env.reset()\n",
     "    action = env.action_space.sample()\n",
-    "    state, reward, done, info = env.step(action)\n",
-    "    print(action)\n",
-    "    print(state)\n",
-    "    print(\"reward\", reward) # 指定该动作获取的奖励值\n",
+    "    state, reward, done,_, info = env.step(action)\n",
     "\n",
     "env.close()\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'gym'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mC:\\WINDOWS\\TEMP/ipykernel_19904/1223209380.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mgym\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfuntional\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'gym'"
-     ]
-    }
-   ],
+   "source": [
+    "调包的整完了，手搓一个试试"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import gym \n",
     "import torch\n",
     "import torch.nn as nn \n",
-    "import torch.nn.funtional as F\n"
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torch.distributions import Categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.0005 \n",
+    "gamma = 0.98 \n",
+    "lmbda = 0.95\n",
+    "eps_clip = 0.1 \n",
+    "K_epoch = 3 \n",
+    "T_horizon = 20 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (TEMP/ipykernel_15340/1345966821.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\WINDOWS\\TEMP/ipykernel_15340/1345966821.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    def __init__(self):\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "class PPO(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "直接开始搓马里奥"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gym_super_mario_bros\n",
+    "from gym.spaces import Box\n",
+    "from gym import Wrapper\n",
+    "from nes_py.wrappers import JoypadSpace#BinarySpaceToDiscreteSpaceEnv\n",
+    "from gym_super_mario_bros.actions import SIMPLE_MOVEMENT, COMPLEX_MOVEMENT, RIGHT_ONLY\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import subprocess as sp"
    ]
   },
   {
@@ -264,7 +209,183 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def process_frame(frame):\n",
+    "    if frame is not None:\n",
+    "        frame = cv2.cvtColor(frame, cv2.COLOR_RGB2GRAY) #图像转换\n",
+    "        \n",
+    "        frame = cv2.resize(frame, (84, 84))[None, :, :] / 255. #裁剪合适大小，并归一化\n",
+    "\n",
+    "        return frame\n",
+    "    else:\n",
+    "        return np.zeros((1,84, 84))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class CustomSkipFrame(Wrapper):\n",
+    "    def __init__(self, env, skip=4):\n",
+    "        super(CustomSkipFrame, self).__init__(env)\n",
+    "        self.observation_space = Box(low=0, high=255, shape=(4, 84, 84))\n",
+    "        self.skip = skip\n",
+    "\n",
+    "    def step(self, action):\n",
+    "        total_reward = 0\n",
+    "        states = []\n",
+    "        state, reward, done, info = self.env.step(action)\n",
+    "        for i in range(self.skip):\n",
+    "            if not done:\n",
+    "                state, reward, done, info = self.env.step(action)\n",
+    "                total_reward += reward\n",
+    "                states.append(state)\n",
+    "            else:\n",
+    "                states.append(state)\n",
+    "        states = np.concatenate(states, 0)[None, :, :, :]\n",
+    "        return states.astype(np.float32), reward, done, info\n",
+    "\n",
+    "    def reset(self):\n",
+    "        state = self.env.reset()\n",
+    "        states = np.concatenate([state for _ in range(self.skip)], 0)[None, :, :, :]\n",
+    "        return states.astype(np.float32)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomReward(Wrapper):\n",
+    "    def __init__(self, env=None):\n",
+    "        super(CustomReward, self).__init__(env)\n",
+    "        self.observation_space = Box(low=0, high=255, shape=(1, 84, 84))\n",
+    "        self.curr_score = 0\n",
+    "        self.pre_x = 38 \n",
+    "    def step(self, action):\n",
+    "        state, reward, done, info = self.env.step(action) \n",
+    "        state = process_frame(state)\n",
+    "        reward += (info[\"score\"] - self.curr_score) / 50.\n",
+    "        \n",
+    "        reward += (info[\"x_pos\"] - self.pre_x ) * 10.\n",
+    "        self.pre_x = info[\"x_pos\"]\n",
+    "        # self.pre_x = info[\"x_pos\"]\n",
+    "        self.curr_score = info[\"score\"]\n",
+    "        if done:\n",
+    "            if info[\"flag_get\"]:\n",
+    "                reward += 5000\n",
+    "            else:\n",
+    "                reward -= 50\n",
+    "        return state, reward/10. , done, info\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.curr_score = 0\n",
+    "        return process_frame(self.env.reset())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#至此，我们完成了超级玛丽环境的自定义，封装如下：\n",
+    "def create_train_env(world, stage, action_type, output_path=None):\n",
+    "    env = gym_super_mario_bros.make(\"SuperMarioBros-{}-{}-v0\".format(world, stage))\n",
+    "    if action_type == \"right\":\n",
+    "        actions = RIGHT_ONLY\n",
+    "    elif action_type == \"simple\":\n",
+    "        actions = SIMPLE_MOVEMENT\n",
+    "    else:\n",
+    "        actions = COMPLEX_MOVEMENT\n",
+    "    env = JoypadSpace(env, actions)\n",
+    "    env = CustomReward(env)\n",
+    "    env = CustomSkipFrame(env)\n",
+    "    return env, env.observation_space.shape[0], len(actions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.signal\n",
+    "from gym.spaces import Box, Discrete\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.distributions.normal import Normal\n",
+    "from torch.distributions.categorical import Categorical\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combined_shape(length,shape=None):\n",
+    "    if shape is None :\n",
+    "        return (length,)\n",
+    "    return (length,shape) if np.isscalar(shape) else (length,*shape)\n",
+    "    # np.isscalar 判断对象是否为标量值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class cnn_model(nn.Module):\n",
+    "    def __init__(self,num_inputs,num_out,activation = nn.ReLU):\n",
+    "        super(cnn_model,self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(num_inputs,32,3,stride = 2 ,padding =1)\n",
+    "        self.conv2 = nn.Conv2d(32,32,3,stride = 2 ,padding =1)\n",
+    "        self.conv3 = nn.Conv2d(32,32,3,stride = 2 ,padding =1)\n",
+    "        self.conv4 = nn.Conv2d(32,32,3,stride = 2 ,padding =1)\n",
+    "        self.lstm = nn.Linear(326*6,512)\n",
+    "        self.fc_out = nn.Linear(512,num_out)\n",
+    "        self._initialize_weights() # 初始化权重\n",
+    "    def _initialize_weights(self):\n",
+    "        for module in self.modules: # 以迭代器的方式返回此前声明的所有layer\n",
+    "            if isinstance(module,nn.Conv2d) or isinstance(module,nn.Linear): #isinstance,判断参数一是否是参数二的格式\n",
+    "                nn.init.xavier_uniform_(module.weight) # 使用均匀分布 用值填充输入张量\n",
+    "                nn.init.constant_(module.bis,0)  # 使用 输入值来为bis填入张量\n",
+    "            elif isinstance(module,nn.LSTMCell):\n",
+    "                nn.init.constant_(module.bis_ih,0) \n",
+    "                nn.init.constant_(module.bis_hh,0) \n",
+    "    def forward(self,x):\n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        x = F.relu(self.conv3(x))\n",
+    "        x = F.relu(self.conv4(x))\n",
+    "        x = x.view(x.size(0),-1)\n",
+    "        x = F.relu(self.lstm(x))\n",
+    "        out = self.fc_out(x)\n",
+    "        return out "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_var(module):#计算参数总数\n",
+    "    return sum([np.prod(p.shape) for p in module.parameters()]) \n",
+    "def discount_cumsum(x,discount):\n",
+    "    return scipy.signal.lfilter([1],[1,float(-discount)],x[::-1],axis = 0)[::-1]\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
