--- a/data/算法例题/二分查找.md
+++ b/data/算法例题/二分查找.md
@@ -112,7 +112,7 @@ class Solution:
 - `1 <= nums[i] <= 10^9`
 - `1 <= k <= (nums.length + 1)/2`
 
-### 本人解法
+#### 本人解法
 ```python
 class Solution:
     def minCapability(self, nums: List[int], k: int) -> int:
@@ -165,3 +165,130 @@ class Solution:
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 ```
 看到最大最小值就要直接想到二分查找
+
+### 2251. 花期内花的数目([原题](https://leetcode.cn/problems/number-of-flowers-in-full-bloom/description/))
+
+困难
+
+给你一个下标从 0 开始的二维整数数组 flowers ，其中 flowers[i] = [starti, endi] 表示第 i 朵花的 花期 从 starti 到 endi （都 包含）。同时给你一个下标从 0 开始大小为 n 的整数数组 people ，people[i] 是第 i 个人来看花的时间。
+
+请你返回一个大小为 n 的整数数组 answer ，其中 answer[i]是第 i 个人到达时在花期内花的 数目 。
+
+ 
+
+> 示例 1：
+> ![Alt text](2251_1.png)
+> 输入：flowers = `[[1,6],[3,7],[9,12],[4,13]]`, people = [2,3,7,11]
+> 输出：[1,2,2,2]
+> 解释：上图展示了每朵花的花期时间，和每个人的到达时间。
+> 对每个人，我们返回他们到达时在花期内花的数目。
+
+> 示例 2：
+> ![Alt text](2251_2.png)
+> 输入：flowers = `[[1,10],[3,3]]`, people = [3,3,2]
+> 输出：[2,2,1]
+> 解释：上图展示了每朵花的花期时间，和每个人的到达时间。
+> 对每个人，我们返回他们到达时在花期内花的数目。
+ 
+
+提示：
+
+> `1 <= flowers.length <= 5 * 10^4`
+> `flowers[i].length == 2`
+> `1 <= starti <= endi <= 10^9`
+> `1 <= people.length <= 5 * 10^4`
+> `1 <= people[i] <= 10^9`
+
+
+#### 本人解法
+```python
+class Solution:
+    def fullBloomFlowers(self, flowers: List[List[int]], people: List[int]) -> List[int]:
+        a = dict()
+        flowers.sort()
+
+        n_flowers = len(flowers)
+        n_flower_now = 0  
+        now = 0 
+
+        people = [(i,index) for index,i in enumerate(people)]
+        people.sort()
+
+        heap = [0]
+        ans = [-1 for i in people]
+        num = 1
+        print(flowers)
+        # 可以考虑使用堆的方式保存末尾
+        # 以人物列表作为主要循环进行推进
+        # 存在几种情况
+        # 1. 人物所到的时间高于当前时间 ， 通过推进花列表来推进时间
+        # 2. 人物所到的时间低于于当前时间 ， 移除堆中小于人物到达时间的花
+        for time,index  in people:
+            while n_flower_now < n_flowers:
+
+                #当人来的时间在当前时间之前，不会使得花期出堆，可以直接返回
+                if time < now :
+                    ans[index] = num - 1 
+                    break
+
+                # 当人来的时间在当前时间之后，需要进行判断，堆中所有小于time的花均需移除，（time>=now）
+                while heap and heap[0] < time :
+                    heapq.heappop(heap)
+                    num -=1 
+                # 让花进堆
+                left , right = flowers[n_flower_now]
+                n_flower_now += 1 
+                heapq.heappush(heap, right)
+                now = left
+                num +=1 
+
+            while heap and heap[0] < time :
+                heapq.heappop(heap)
+                num -=1 
+            if time < now :
+                ans[index] = num - 1 
+            else:
+                ans[index] = num
+            
+        return ans
+```
+看着是不是非常的高大上？毛，二分就能做，看到答案直接傻了
+
+#### 他人解法
+与本人思路相同的差分法
+```python
+class Solution:
+    def fullBloomFlowers(self, flowers: List[List[int]], people: List[int]) -> List[int]:
+        diff = Counter()
+        for start, end in flowers:
+            diff[start] += 1
+            diff[end + 1] -= 1
+        times = sorted(diff.keys())
+
+        j = s = 0
+        for p, i in sorted(zip(people, range(len(people)))):
+            while j < len(times) and times[j] <= p:
+                s += diff[times[j]]  # 累加不超过 people[i] 的差分值
+                j += 1
+            people[i] = s  # 从而得到这个时刻花的数量
+        return people
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/problems/number-of-flowers-in-full-bloom/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+
+爆杀本人的二分法
+```python
+class Solution:
+    def fullBloomFlowers(self, flowers: List[List[int]], people: List[int]) -> List[int]:
+        starts = sorted(s for s, _ in flowers)
+        ends = sorted(e for _, e in flowers)
+        return [bisect_right(starts, p) - bisect_left(ends, p) for p in people]
+
+作者：灵茶山艾府
+链接：https://leetcode.cn/problems/number-of-flowers-in-full-bloom/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
