ppo环境配置完成

--- a/深度学习.md
+++ b/深度学习.md
@@ -323,8 +323,16 @@ model.eval()
 
 ### 4.3 nn部分
 #### 4.3.1 模型构建部分
-- `torch.nn.Conv2d(num_inputs,32,3,stride = 2 ,padding =1)` : 创建  的卷积层
-- `torch.nn.Linear(326*6,512)` ：创建  的线性层
+- `torch.nn.Conv2d(in_channels,out_channels,kernel_size,stride ,padding)` : 创建  的卷积层
+  - `in_channels` :  输入的Tensor的通道数
+  - `out_channels` : 输出的Tensor的通道数
+  - `kernel_size` : 卷积核尺寸
+  - `stride` : 卷积步长
+  - `padding` ： 填充操作
+- `torch.nn.Linear(in_feature,out_feature,bias)` ：
+  - `in_feature` :  输入的Tensor的通道数
+  - `out_feature` : 输出的Tensor的通道数
+  - `bias` ： 是否添加bias偏置
 - `torch.nn.maxpool2d()` # 创建 的最大池化层
 
 
