--- a/强化学习.md
+++ b/强化学习.md
@@ -8,7 +8,7 @@
 #### 1.1 环境构建
 
 #### 1.1.1 使用conda构建一个新的虚拟环境
-![Alt text](data/强化学习/activate.png)
+![Alt text](data/强化学习/img/activate.png)
 
 #### 1.1.2 安装所需的环境
 `pip install gym gym_super_mario_bros opencv-python spinup joblib --user`
@@ -18,10 +18,10 @@
 在学习过程中发现一个非常严肃的问题，教程的gym版本好像太低了，很多东西都对不上
 ##### 1.1.3.1 问题
 1. env 中的 step 的返回值与所需的不同
-![Alt text](data/强化学习/error_1.png)
+![Alt text](data/强化学习/img/error_1.png)
 > 经过查询后发现，gym已经经历了多次的版本升级。简称，这个问题很复杂。选择性放弃。先不复现了，学了先。
 * 解决 ：根据`gym_super_mario_bros`所需的最低gym对gym进行重装，以求得能够复现教程的实例。
-  ![Alt text](data/强化学习/solve_1.png)
+  ![Alt text](data/强化学习/img/solve_1.png)
 
 2. windows环境下无法使用
 ```python
@@ -36,4 +36,30 @@ def game_show(state):
     cv2.imshow("game",state)
     cv2.waitKey(1)
 ```
-在data中的`ppo.ipynb `已经实现了代码的复现。但是由于工作上对于torch以及深度学习其他方面的需要，强化学习的进度暂缓
+在data中的`ppo.ipynb `已经实现了代码的复现。
+
+3. Spinning up库无法安装
+   
+###### 3.1  TensorFlow无法安装
+逆天的是Spinning up库中使用的是TensorFlow<2.0 ，而只用3.7以下的python版本
+所以需要创建一个3.7版本的python环境进行重写安装
+
+###### 3.2 torch无法安装
+![Alt text](data/强化学习/img/error_2.png)
+然后逆天错误又出现了，torch版本已经低到找不到了，需要去https://download.pytorch.org/whl/torch_stable.html
+找到对应版本的torch下载。然后进行本地安装
+![Alt text](data/强化学习/img/error_3.png)
+
+###### 3.3 box2d-py无法安装
+![Alt text](data/强化学习/img/error_4.png)
+通过报错信息可以看到主要原因在于没有swig.exe文件，这需要先执行`pip install swig`
+![Alt text](data/强化学习/img/error_5.png)
+然后就可以正常运行了。
+
+###### 3.4 运行报错
+>If this call came from a _pb2.py file, your generated code is out of date and must be regenerated with protoc >= 3.19.0. If you cannot immediately regenerate your protos, some other possible workarounds are:  
+>1. Downgrade the protobuf package to 3.20.x or lower.  
+> 2. Set PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python (but this will use pure-Python parsing and will be much slower).
+
+经过查资料后发现是protobuf的版本过高的问题
+使用`pip install protobuf==3.19.0 `即可解决问题 
