--- a/data/算法例题/图论.md
+++ b/data/算法例题/图论.md
@@ -366,3 +366,110 @@ class Solution:
 4. 找叶子节点的父节点的父节点（可以跨两层拿金币）
 5. 根据剩余边数获取答案
 6. 考虑到存在同一父节点为多个有金币的叶节点的情况，所以考虑节点入度，当度数为1时，即为叶节点后才将其进行计数。
+
+
+# 回溯
+## 39. 组合总和([原题](https://leetcode.cn/problems/combination-sum))
+
+中等
+
+给你一个 无重复元素 的整数数组 candidates 和一个目标整数 target ，找出 candidates 中可以使数字和为目标数 target 的 所有 不同组合 ，并以列表形式返回。你可以按 任意顺序 返回这些组合。
+
+candidates 中的 同一个 数字可以 无限制重复被选取 。如果至少一个数字的被选数量不同，则两种组合是不同的。 
+
+对于给定的输入，保证和为 target 的不同组合数少于 150 个。
+
+ 
+
+> 示例 1：
+> 
+> 输入：candidates = [2,3,6,7], target = 7
+> 输出：[[2,2,3],[7]]
+> 解释：
+> 2 和 3 可以形成一组候选，2 + 2 + 3 = 7 。注意 2 可以使用多次。
+> 7 也是一个候选， 7 = 7 。
+> 仅有这两种组合。
+
+> 示例 2：
+> 
+> 输入: candidates = [2,3,5], target = 8
+> 输出: [[2,2,2,2],[2,3,3],[3,5]]
+
+
+> 示例 3：
+> 
+> 输入: candidates = [2], target = 1
+> 输出: []
+ 
+
+提示：
+
+- `1 <= candidates.length <= 30`
+- `2 <= candidates[i] <= 40`
+- `candidates 的所有元素 互不相同`
+- `1 <= target <= 40`
+
+###   本人解法
+其实也是看了题解的部分才想出来的
+```python
+class Solution:
+    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:
+        ans = []
+        def dfs(node,way):
+            if node < 0 :
+                return 
+            if node == 0 :
+                way.sort()
+                if way not in ans :
+                    ans.append(way)
+            for i in candidates:
+                e = node-i
+                dfs(e,way + [i])
+
+        dfs(target,[])
+        return ans 
+```
+- 使用way 来统计目前走过的路径，
+- 当node < 0 时，表示后续的所有可能路径均为不可行路径，需要进行剪枝，
+- node == 0 时表示已经到达，需要将当前的路径添加至主路径中
+- 存在大量的重复计算，具有优化空间
+
+![Alt text](../算法/39_1.png)
+### 他人解法
+```python
+from typing import List
+
+
+class Solution:
+    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:
+
+        def dfs(candidates, begin, size, path, res, target):
+            if target == 0:
+                res.append(path)
+                return
+
+            for index in range(begin, size):
+                residue = target - candidates[index]
+                if residue < 0:
+                    break
+
+                dfs(candidates, index, size, path + [candidates[index]], res, residue)
+
+        size = len(candidates)
+        if size == 0:
+            return []
+        candidates.sort()
+        path = []
+        res = []
+        dfs(candidates, 0, size, path, res, target)
+        return res
+
+作者：liweiwei1419
+链接：https://leetcode.cn/problems/combination-sum/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+- 使用开始以及结束符来去除重复运算
+- 使用排序提高剪枝速度
+
+![Alt text](../算法/39_2.png)
