--- a/data/算法例题/动态规划.md
+++ b/data/算法例题/动态规划.md
@@ -96,6 +96,53 @@ class Solution:
 同理，但是代码好看一些
 
 
+### 188. 买卖股票的最佳时机 IV([原题](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-iv/))
+
+
+困难
+
+给你一个整数数组 prices 和一个整数 k ，其中 prices[i] 是某支给定的股票在第 i 天的价格。
+
+设计一个算法来计算你所能获取的最大利润。你最多可以完成 k 笔交易。也就是说，你最多可以买 k 次，卖 k 次。
+
+注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+ 
+
+> 示例 1：
+> 
+> 输入：k = 2, prices = [2,4,1]
+> 输出：2
+> 解释：在第 1 天 (股票价格 = 2) 的时候买入，在第 2 天 (股票价格 = 4) 的时候卖出，这笔交易所能获得利润 = 4-2 = 2 。
+
+>示例 2：
+>
+>输入：k = 2, prices = [3,2,6,5,0,3]
+>输出：7
+>解释：在第 2 天 (股票价格 = 2) 的时候买入，在第 3 天 (股票价格 = 6) 的时候卖出, 这笔交易所能获得利润 = 6-2 = 4 。
+     随后，在第 5 天 (股票价格 = 0) 的时候买入，在第 6 天 (股票价格 = 3) 的时候卖出, 这笔交易所能获得利润 = 3-0 = 3 。
+ 
+
+提示：
+
+- `1 <= k <= 100`
+- `1 <= prices.length <= 1000`
+- `0 <= prices[i] <= 1000`
+
+#### 他人解法
+```python 
+class Solution:
+    def maxProfit(self, k: int, prices: List[int]) -> int:
+        f = [[-inf] * 2 for _ in range(k + 2)]
+        for j in range(1, k + 2):
+            f[j][0] = 0
+        for i, p in enumerate(prices):
+            for j in range(k + 1, 0, -1):
+                f[j][0] = max(f[j][0], f[j][1] + p)
+                f[j][1] = max(f[j][1], f[j - 1][0] - p)
+        return f[-1][0]
+```
+对交易次数进行动态规划。策略为0 卖出/不进行操作, 进行购买操作或是保持购买状态。
 
 ## 1.2 多维动态规划
 ### 72. 编辑距离([原题](https://leetcode.cn/problems/edit-distance/description/))[多维动态规划]
