1488  洪水 贪心二分

--- a/data/算法例题/二分查找.md
+++ b/data/算法例题/二分查找.md
@@ -292,3 +292,189 @@ class Solution:
 来源：力扣（LeetCode）
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 ```
+
+
+## 1.2 最大值查询
+## 1.3 贪心算法
+### 1488. 避免洪水泛滥([原题](https://leetcode.cn/problems/avoid-flood-in-the-city/))
+
+中等
+
+你的国家有无数个湖泊，所有湖泊一开始都是空的。当第 n 个湖泊下雨前是空的，那么它就会装满水。如果第 n 个湖泊下雨前是 满的 ，这个湖泊会发生 洪水 。你的目标是避免任意一个湖泊发生洪水。
+
+给你一个整数数组 `rains` ，其中：
+
+- `rains[i] > 0` 表示第 i 天时，第 `rains[i]` 个湖泊会下雨。
+- `rains[i] == 0` 表示第 i 天没有湖泊会下雨，你可以选择 一个 湖泊并 抽干 这个湖泊的水。
+请返回一个数组 ans ，满足：
+
+- `ans.length == rains.length`
+如果 `rains[i] > 0` ，那么`ans[i] == -1` 。
+- 如果 `rains[i] == 0` ，`ans[i]` 是你第 i 天选择抽干的湖泊。
+- 如果有多种可行解，请返回它们中的 任意一个 。如果没办法阻止洪水，请返回一个 空的数组 。
+
+请注意，如果你选择抽干一个装满水的湖泊，它会变成一个空的湖泊。但如果你选择抽干一个空的湖泊，那么将无事发生。
+
+ 
+
+> 示例 1：
+> 
+> 输入：rains = [1,2,3,4]
+> 输出：[-1,-1,-1,-1]
+> 解释：第一天后，装满水的湖泊包括 [1]
+> 第二天后，装满水的湖泊包括 [1,2]
+> 第三天后，装满水的湖泊包括 [1,2,3]
+> 第四天后，装满水的湖泊包括 [1,2,3,4]
+> 没有哪一天你可以抽干任何湖泊的水，也没有湖泊会发生洪水。
+
+> 示例 2：
+> 
+> 输入：rains = [1,2,0,0,2,1]
+> 输出：[-1,-1,2,1,-1,-1]
+> 解释：第一天后，装满水的湖泊包括 [1]
+> 第二天后，装满水的湖泊包括 [1,2]
+> 第三天后，我们抽干湖泊 2 。所以剩下装满水的湖泊包括 [1]
+> 第四天后，我们抽干湖泊 1 。所以暂时没有装满水的湖泊了。
+> 第五天后，装满水的湖泊包括 [2]。
+> 第六天后，装满水的湖泊包括 [1,2]。
+> 可以看出，这个方案下不会有洪水发生。同时， [-1,-1,1,2,-1,-1] 也是另一个可行的没有洪水的方案。
+
+> 示例 3：
+> 
+> 输入：rains = [1,2,0,1,2]
+> 输出：[]
+> 解释：第二天后，装满水的湖泊包括 [1,2]。我们可以在第三天抽干一个湖泊的水。
+> 但第三天后，湖泊 1 和 2 都会再次下雨，所以不管我们第三天抽干哪个湖泊的水，另一个湖泊都会发生洪水。
+ 
+
+提示：
+
+- `1 <= rains.length <= 10^5`
+- `0 <= rains[i] <= 10^9`
+  
+#### 本人解法(超时)
+```python
+class Solution:
+    def avoidFlood(self, rains: List[int]) -> List[int]:
+        i,j = 0,0
+        n = len(rains)
+
+        # 由于只存在0（干），1（满）两种状态，所以可以考虑使用位运算来降低空间复杂度
+        ans = [-1 for i in range(n)]
+        t=  [] # 但是我不会
+        while i < n :
+            if rains[i] == 0 :
+                j =i+1 
+                while j < n :
+                    if rains[j] != 0 :
+                        if rains[j] in t :
+                            t.pop(t.index(rains[j]))
+                            ans[i] = rains[j]
+
+                            break
+                    j+= 1 
+                if j >= n :
+                    ans[i] = 1 
+            else:
+                if rains[i] not in t :
+                    t.append(rains[i])
+                else:
+                    return []
+            i+=1 
+        return ans
+```
+不出意外的超时了
+
+#### 本人解法(借鉴)
+```python
+class Solution:
+    def avoidFlood(self, rains: List[int]) -> List[int]:
+        i,j = 0,0
+        n = len(rains)
+
+        ans = [-1 for i in range(n)]
+        sun=  [] 
+        rainday= {}
+        for index, i in enumerate(rains):
+            if  i == 0 :
+                sun.append(index)
+            else:
+                if i in rainday:
+                    flag = True 
+                    for index_,j in enumerate(sun):
+                        if j > rainday[i]:
+                            rainday[i] = index
+                            ans[j] = i
+                            sun.pop(index_)
+                            flag =False
+                            break
+                    if flag:
+                        return []
+                else:
+                    rainday[i] = index
+        for i in sun:
+            ans[i] = 1 
+        return ans 
+```
+跟着他人的思路勉强写完了，但是可以使用二分查抄来进行优化
+![Alt text](../算法/1488_1.png)
+#### 本人解法(二分优化)
+```python
+class Solution:
+    def avoidFlood(self, rains: List[int]) -> List[int]:
+
+        n = len(rains)
+        ans = [1 for i in range(n)]
+        sun=  [] 
+        rainday= {}
+        for index, i in enumerate(rains):
+            if  i == 0 :
+                sun.append(index)
+            else:
+                if i in rainday:
+                    k = bisect.bisect_left(sun, rainday[i]+1)
+                    if k >= len(sun):
+                        return []
+                    else:
+                        ans[sun[k]] = i
+                        sun.pop(k)
+                rainday[i] = index
+                ans[index] = -1
+        return ans
+```
+![Alt text](../算法/1488_2.png)
+#### 他人解法
+```c++
+    vector<int> avoidFlood(vector<int>& rains) {
+        vector<int> ans(rains.size(), 1);
+        unordered_map<int, int> water;
+        set<int> zero;
+
+        for (int i = 0; i < rains.size(); i++) {
+            int r = rains[i];
+
+            if (r == 0) {
+                zero.insert(i);
+                continue;
+            }
+
+            if (water.count(r) != 0) {
+                auto it = zero.lower_bound(water[r]);
+                if (it == zero.end()) return {};
+                ans[*it] = r;
+                zero.erase(it);
+            }
+            water[r] = i;
+            ans[i] = -1;
+        }
+
+        return ans;
+    }    
+
+作者：Ikaruga
+链接：https://leetcode.cn/problems/avoid-flood-in-the-city/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
+![Alt text](../算法/1488_3.png)
+这么一看c++真的快了好多
