51 n女王问题 回溯

--- a/data/算法例题/图论.md
+++ b/data/算法例题/图论.md
@@ -548,3 +548,70 @@ class Solution:
 4. 当递归中还未进入循环前end就已经超过n时，表示到达字符底部，直接返回已有的值(当前路径的值)，而使用一个t来接受所有递归返回的值以作为最后的返回值
 
 ![Alt text](../算法/131_1.png)
+
+### 51. N 皇后([原题](https://leetcode.cn/problems/n-queens/description/))
+
+困难
+
+按照国际象棋的规则，皇后可以攻击与之处在同一行或同一列或同一斜线上的棋子。
+
+n 皇后问题 研究的是如何将 n 个皇后放置在 n×n 的棋盘上，并且使皇后彼此之间不能相互攻击。
+
+给你一个整数 n ，返回所有不同的 n 皇后问题 的解决方案。
+
+每一种解法包含一个不同的 n 皇后问题 的棋子放置方案，该方案中 'Q' 和 '.' 分别代表了皇后和空位。
+
+ 
+
+> 示例 1：
+> ![Alt text](../算法/51_1.png)
+> 输入：n = 4
+> 输出：[[".Q..","...Q","Q...","..Q."],["..Q.","Q...","...Q",".Q.."]]
+> 解释：如上图所示，4 皇后问题存在两个不同的解法。
+
+> 示例 2：
+> 
+> 输入：n = 1
+> 输出：[["Q"]]
+ 
+
+提示：
+
+- `1 <= n <= 9`
+
+### 本人解法
+```python
+class Solution:
+    def solveNQueens(self, n: int) -> List[List[str]]:
+        def dfs(row,rule,way):
+            if row == n:
+                return [way]
+            ans = []
+            for i in range(n):
+                
+                if (row,i) not in rule :
+                    t = set()
+                    #添加纵向
+                    for j in range(row,n):
+                        t.add((j,i))
+                    #添加左下向
+                    for j in range(min(i,n-row)+1):
+                        t.add((row+j,i-j))
+                    #添加右下向
+                    for j in range(min(n-i,n-row)+1):
+                        t.add((row+j,i+j))
+                    ans += dfs(row+1,rule | t,way+[i])
+
+            return ans 
+        ans = dfs(0,set(),[])
+        for i in ans :
+            e = []
+            for index,j in enumerate(i) :
+                i[index]= "." * j + "Q" + "."*(n-j-1)
+        return ans
+```
+1. 从第一行开始遍历
+2. 当不在rule中时即为可选项，进行递归，并将限制条件加入递归的rule中，通过way来保存路径
+3. 通过way来进行复原
+
+![Alt text](../算法/51_2.png)
