笔记格式修正，添加多级目录

--- a/data/ai/LLM/大模型.md
+++ b/data/ai/LLM/大模型.md
@@ -1,4 +1,4 @@
-# [笔记目录](目录.md)
+[返回AI主体部分](../../../ai.md)
 # 大模型部分
 ____
 # 1.基础知识
@@ -14,7 +14,7 @@ ____
 子词: 经常出现的词
 
 ## 1.3 并行
-![Alt text](data/LLM/Parallel.png)
+![Alt text](img/Parallel.png)
 
 ## 1.4 模型压缩和加速
 1. 剪枝
@@ -50,8 +50,8 @@ LoRA模型:以一定的特征替换底模中的对应元素，向现有的模型
 
 1. 注意在样本中需要手动调整标签，ai识别的标签通常效果不好。
 2. dim 128
-   ![Alt text](data/LLM/dim.png)
-   ![Alt text](data/LLM/process.png)
+   ![Alt text](img/dim.png)
+   ![Alt text](img/process.png)
 
 不是很对劲，stablediffusion的lora模型好像都是封装好的。而且对硬件要求更高。但是用公司的电脑还是能勉强跑跑的
 这种有整合包的不确定能不能作为项目经验写到简历中，优先级较低。选择更换ChatGLM-6B 微调来进行实战。stableDiffusion的lora模型将作为附加项进行学习
@@ -65,8 +65,8 @@ LoRA模型:以一定的特征替换底模中的对应元素，向现有的模型
     * 在`THU-Cloud-Downloader`路径下执行
     `python main.py --link https://cloud.tsinghua.edu.cn/d/fb9f16d6dc8f482596c2/  --save ../chatglm-6b/`开始模型文件的下载
     
-    ![Alt text](data/LLM/GLM_1.png)
-    ![](data/LLM/GLM_2.png)
+    ![Alt text](img/GLM_1.png)
+    ![](img/GLM_2.png)
     不知道是不是我的问题，连接一直中断，还是别瞎搞了，自己一个个下吧
 
 由于新项目，建议创建一个新的conda环境
@@ -78,13 +78,13 @@ LoRA模型:以一定的特征替换底模中的对应元素，向现有的模型
 在测试过程中出现readline库的缺失，并且无法使用pip直接进行安装。(windows环境下无法正常安装该包)
 使用`python -m pip install pyreadline`即可完成安装
 出现"OSError: ../model does not appear to have a file named config.json. Checkout 'https://huggingface.co/../model/None' for available files."
-![Alt text](data/LLM/GLM_6.png)
+![Alt text](img/GLM_6.png)
 根据资料有可能是transformers版本的问题，可以奇怪的是transformers是requirements.txt中指定的版本。不管了重装以一次试试
-![Alt text](data/LLM/GLM_7.png)
+![Alt text](img/GLM_7.png)
 成功了，估摸着是下载的代码的版本有冲突。
 5. 模型调整开始
-![Alt text](data/LLM/GLM_3.png)
-![Alt text](data/LLM/GLM_4.png)
+![Alt text](img/GLM_3.png)
+![Alt text](img/GLM_4.png)
 通过并行的方式降低训练的显存，
-![Alt text](data/LLM/GLM_5.png)
+![Alt text](img/GLM_5.png)
 0:35:0开始训练参数的讲解
