--- a/目录.md
+++ b/目录.md
@@ -3,11 +3,6 @@
 ## [c++部分](c++.md)
 ## [python部分](python.md)
 ## [Linux部分](Linux.md)
-## [markdown部分](markdown.md)
 ## [算法部分](算法.md)
-## [计算机视觉部分](cv.md)
-## [大模型部分](大模型.md)
-## [深度学习基础](深度学习.md)
-## [数据清洗](数据清洗.md)
-## [numpy](numpy.md)
-## [html](html.md)
+## [前端部分](./前端.md)
+## [AI部分](./ai.md)
