--- a/算法.md
+++ b/算法.md
@@ -86,7 +86,7 @@ class Solution:
 ```
 ###### 想法
 分析题目，要求取字符串中的子串，可以很快的想到要使用滑动窗口。虽然很丑陋，但是还是勉强满足了要求
-![Alt text](data/算法/76_1.png)
+![Alt text](data/算法/img/76_1.png)
 ###### 他人更优解
 ```
 def minWindow(self, s: str, t: str) -> str:
@@ -121,7 +121,7 @@ def minWindow(self, s: str, t: str) -> str:
 ```
 
 ## 2.链表
-## 2.1 例题([题库](data/算法例题/链表.md))
+### 2.1 例题([题库](data/算法例题/链表.md))
 ## 3.图
 &emsp;&emsp;当发现题目中构成了相连的多个节点时，即可认为是图这一方向的题目。主要的算法有**深度优先算法**，**广度优先算法**，**剪枝**等
 ### 3.1 例题([题库](data/算法例题/图论.md))
@@ -336,7 +336,7 @@ class Solution:
         return -1 
 ```
 勉强完成
-![Alt text](data/算法/1926_1.png)
+![Alt text](data/算法/img/1926_1.png)
 
 一定有更好的形式可以适用于广度优先搜索情况的下的数据存储。
 ##### 他人解法
@@ -364,7 +364,7 @@ class Solution:
                             Q.append([nr, nc])
         return -1
 ```
-![Alt text](data/算法/1926_2.png)
+![Alt text](data/算法/img/1926_2.png)
 
 ___
 ## 4.哈希表
@@ -550,7 +550,7 @@ _____________________________________________
 
 示例 1：
 
-![Alt text](data/算法/1289_1.png)
+![Alt text](data/算法/img/1289_1.png)
 
 输入：grid = `[[1,2,3],[4,5,6],[7,8,9]]`
 输出：13
@@ -648,7 +648,7 @@ class Solution:
 * 时间复杂度分析:**O(n^2^)**
 * 空间复杂度分析:**O(n)**
 成功通过
-![Alt text](data/算法/1289_2.png)
+![Alt text](data/算法/img/1289_2.png)
 
 ###### 他人更优解
 ``` python
@@ -992,7 +992,7 @@ class Solution:
                 a,b,c = b,c,nums[i+1]
         return n-1
 ```
-![Alt text](data/算法/162_1.png)
+![Alt text](data/算法/img/162_1.png)
 
 #### 他人解法：
 &emsp;&emsp;完全想不出来如何进行二分
@@ -1166,3 +1166,61 @@ class Trie(object):
 ```
 ## 10.前缀和
 ### 10.1 例题([题库](data/算法例题/前缀和.md))
+## 11.位运算
+### 11.1 解题模板
+    没有固定的解题模板，题型多变。但都依赖于逻辑运算。
+
+### 11.2 例题(题库)
+####  136. 只出现一次的数字 
+给你一个 非空 整数数组 `nums` ，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
+
+你必须设计并实现线性时间复杂度的算法来解决此问题，且该算法只使用常量额外空间。
+
+ 
+
+> 示例 1 ：
+> 
+> 输入：nums = [2,2,1]
+> 输出：1
+
+> 示例 2 ：
+> 
+> 输入：nums = [4,1,2,1,2]
+> 输出：4
+
+> 示例 3 ：
+> 
+> 输入：nums = [1]
+> 输出：1
+ 
+
+提示：
+
+- $1 <= nums.length <= 3 * 10^4$
+- $-3 * 10^4 <= nums[i] <= 3 * 10^4$
+- 除了某个元素只出现一次以外，其余每个元素均出现两次。
+
+##### 计数解法
+```python
+class Solution:
+    def singleNumber(self, nums: List[int]) -> int:
+        a = Counter(nums )
+        for i in a :
+            if a[i] == 1 :
+                return i
+```
+![Alt text](data/算法/img/132_1.png)
+##### 位运算解法
+```python
+class Solution:
+    def singleNumber(self, nums: List[int]) -> int:
+        t = 0 
+        for i in nums:
+            t ^= i 
+        return t 
+```
+![Alt text](data/算法/img/132_2.png)
+
+可以很明显的看到，通常情况下位运算总是能达到更好的效果
+
+位运算的难点在于**对题目的分析**与对于**逻辑运算的熟练度**。
