--- a/算法.md
+++ b/算法.md
@@ -970,7 +970,7 @@ class Solution:
 * -2^31^ <= nums[i] <= 2^31^ - 1
 * `对于所有有效的 i 都有 nums[i] != nums[i + 1]`
 
-#### 本人解法：
+##### 本人解法：
 &emsp;&emsp;看到最大长度只有1000，决定直接遍历。
 ```python
 class Solution:
@@ -994,7 +994,7 @@ class Solution:
 ```
 ![Alt text](data/算法/img/162_1.png)
 
-#### 他人解法：
+##### 他人解法：
 &emsp;&emsp;完全想不出来如何进行二分
 ```python
 class Solution:
