--- a/data/算法/算法例题/二分查找.md
+++ b/data/算法/算法例题/二分查找.md
@@ -478,3 +478,104 @@ class Solution:
 ```
 ![Alt text](../img/1488_3.png)
 这么一看c++真的快了好多
+
+## 1.4 区间查询
+### 34. 在排序数组中查找元素的第一个和最后一个位置([原题](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/))
+
+中等
+
+给你一个按照非递减顺序排列的整数数组 nums，和一个目标值 target。请你找出给定目标值在数组中的开始位置和结束位置。
+
+如果数组中不存在目标值 target，返回 [-1, -1]。
+
+你必须设计并实现时间复杂度为 O(log n) 的算法解决此问题。
+
+ 
+
+> 示例 1：
+> 
+> 输入：nums = [5,7,7,8,8,10], target = 8
+> 输出：[3,4]
+
+> 示例 2：
+> 
+> 输入：nums = [5,7,7,8,8,10], target = 6
+> 输出：[-1,-1]
+
+> 示例 3：
+> 
+> 输入：nums = [], target = 0
+> 输出：[-1,-1]
+ 
+
+提示：
+
+- $0 <= nums.length <= 10^5$
+- $-10^9 <= nums[i] <= 10^9$
+- $nums 是一个非递减数组$
+- $-10^9 <= target <= 10^9$
+
+#### 他人解法
+```python
+# 【下面三种写法都是等价的，选一个自己喜欢的就行】
+
+# lower_bound 返回最小的满足 nums[i] >= target 的 i
+# 如果数组为空，或者所有数都 < target，则返回 len(nums)
+# 要求 nums 是非递减的，即 nums[i] <= nums[i + 1]
+
+# 闭区间写法
+def lower_bound(nums: List[int], target: int) -> int:
+    left, right = 0, len(nums) - 1  # 闭区间 [left, right]
+    while left <= right:  # 区间不为空
+        # 循环不变量：
+        # nums[left-1] < target
+        # nums[right+1] >= target
+        mid = (left + right) // 2
+        if nums[mid] < target:
+            left = mid + 1  # 范围缩小到 [mid+1, right]
+        else:
+            right = mid - 1  # 范围缩小到 [left, mid-1]
+    return left  # 或者 right+1
+
+# 左闭右开区间写法
+def lower_bound2(nums: List[int], target: int) -> int:
+    left = 0
+    right = len(nums)  # 左闭右开区间 [left, right)
+    while left < right:  # 区间不为空
+        # 循环不变量：
+        # nums[left-1] < target
+        # nums[right] >= target
+        mid = (left + right) // 2
+        if nums[mid] < target:
+            left = mid + 1  # 范围缩小到 [mid+1, right)
+        else:
+            right = mid  # 范围缩小到 [left, mid)
+    return left  # 或者 right
+
+# 开区间写法
+def lower_bound3(nums: List[int], target: int) -> int:
+    left, right = -1, len(nums)  # 开区间 (left, right)
+    while left + 1 < right:  # 区间不为空
+        mid = (left + right) // 2
+        # 循环不变量：
+        # nums[left] < target
+        # nums[right] >= target
+        if nums[mid] < target:
+            left = mid  # 范围缩小到 (mid, right)
+        else:
+            right = mid  # 范围缩小到 (left, mid)
+    return right  # 或者 left+1
+
+class Solution:
+    def searchRange(self, nums: List[int], target: int) -> List[int]:
+        start = lower_bound(nums, target)  # 选择其中一种写法即可
+        if start == len(nums) or nums[start] != target:
+            return [-1, -1]
+        # 如果 start 存在，那么 end 必定存在
+        end = lower_bound(nums, target + 1) - 1
+        return [start, end]
+
+链接：https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/
+来源：力扣（LeetCode）
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+```
